[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jbg-golflib" # CHANGE THIS: Must be unique on PyPI
version = "0.1.0"
description = "A library of 1-character aliases for code golfing."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Junebug", email = "richjesse62@gmail.com" }
]
keywords = ["golf", "shortcuts", "utility"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["g"] # This tells it to look for your 'g' folder
